snapshots/production/system/iptables-save.txt
# Generated by iptables-save v1.6.1 on Mon Aug 17 01:23:14 2026
*raw
:PREROUTING ACCEPT [21876816:11973178191]
:OUTPUT ACCEPT [17287064:4027322230]
:NETBIRD-RAW - [0:0]
-A PREROUTING -j NETBIRD-RAW
-A OUTPUT -j NETBIRD-RAW
COMMIT
# Completed on Mon Aug 17 01:23:14 2026
# Generated by iptables-save v1.6.1 on Mon Aug 17 01:23:14 2026
*mangle
:PREROUTING ACCEPT [420413:315574152]
:INPUT ACCEPT [305501:80839881]
:FORWARD ACCEPT [57122:20619371]
:OUTPUT ACCEPT [310799:76034413]
:POSTROUTING ACCEPT [367908:96654308]
:KUBE-IPTABLES-HINT - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:NETBIRD-RT-MSSCLAMP - [0:0]
:NETBIRD-RT-PRE - [0:0]
-A PREROUTING -j NETBIRD-RT-PRE
-A PREROUTING -i wt0 -m conntrack --ctstate NEW -j CONNMARK --set-xmark 0x1bd10/0xffffffff
-A FORWARD -j NETBIRD-RT-MSSCLAMP
-A FORWARD -i wt0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i wt0 -m conntrack --ctstate DNAT -m mark ! --mark 0x1bd20 -j DROP
-A POSTROUTING -o wt0 -m conntrack --ctstate NEW -j CONNMARK --set-xmark 0x1bd11/0xffffffff
-A NETBIRD-RT-MSSCLAMP -o wt0 -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1240
-A NETBIRD-RT-PRE -i wt0 -m set --match-set nb0000001 src -m addrtype --dst-type LOCAL -j MARK --set-xmark 0x1bd20/0xffffffff
-A NETBIRD-RT-PRE -i wt0 -m set --match-set nb0000063 src -m addrtype --dst-type LOCAL -j MARK --set-xmark 0x1bd20/0xffffffff
-A NETBIRD-RT-PRE -i wt0 -m set --match-set nb0000081 src -m addrtype --dst-type LOCAL -j MARK --set-xmark 0x1bd20/0xffffffff
-A NETBIRD-RT-PRE -i wt0 -m set --match-set nb0000083 src -m addrtype --dst-type LOCAL -j MARK --set-xmark 0x1bd20/0xffffffff
-A NETBIRD-RT-PRE -i wt0 -p tcp -m set --match-set nb0000093-dport src -m tcp --dport 443 -m addrtype --dst-type LOCAL -j MARK --set-xmark 0x1bd20/0xffffffff
COMMIT
# Completed on Mon Aug 17 01:23:14 2026
# Generated by iptables-save v1.6.1 on Mon Aug 17 01:23:14 2026
*nat
:PREROUTING ACCEPT [2108144:5271356678]
:INPUT ACCEPT [325283:19252312]
:OUTPUT ACCEPT [902992:54560297]
:POSTROUTING ACCEPT [924186:56486749]
:CNI-DN-a4cb24fc39591e11f9bb8 - [0:0]
:CNI-HOSTPORT-DNAT - [0:0]
:CNI-HOSTPORT-MASQ - [0:0]
:CNI-HOSTPORT-SETMARK - [0:0]
:FLANNEL-POSTRTG - [0:0]
:KUBE-EXT-CVG3OEGEH7H5P3HQ - [0:0]
:KUBE-EXT-UQMCRMJZLI3FTLDP - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-MARK-MASQ - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-POSTROUTING - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-SEP-47Y5U5YZCS62OEBZ - [0:0]
:KUBE-SEP-7LZSRWW2O47JYKAG - [0:0]
:KUBE-SEP-DNK5QGLSB3KVH7BQ - [0:0]
:KUBE-SEP-FKBAFHEMNDLWAALR - [0:0]
:KUBE-SEP-IDRCU4GVQLEQPIJI - [0:0]
:KUBE-SEP-KIIPWNCXDWEKYBT2 - [0:0]
:KUBE-SEP-UMJVULBQ4FY6GLTN - [0:0]
:KUBE-SEP-WRRI3TLRN4DJLEIK - [0:0]
:KUBE-SEP-WXNJTCLK7DXLEPOE - [0:0]
:KUBE-SEP-ZDAZRPWR77NCFC3T - [0:0]
:KUBE-SERVICES - [0:0]
:KUBE-SVC-7JZAWIZ4MMWN35ZA - [0:0]
:KUBE-SVC-C6FLSAAXH3PSQ5AI - [0:0]
:KUBE-SVC-CVG3OEGEH7H5P3HQ - [0:0]
:KUBE-SVC-ERIFXISQEP7F7OF4 - [0:0]
:KUBE-SVC-JD5MR3NA4I4DYORP - [0:0]
:KUBE-SVC-NPX46M4PTMTKRN6Y - [0:0]
:KUBE-SVC-SJ3JN7SAIKENWRXO - [0:0]
:KUBE-SVC-TCOU7JCQXEZGVUNU - [0:0]
:KUBE-SVC-UQMCRMJZLI3FTLDP - [0:0]
:KUBE-SVC-Z4ANX4WAEWEBLCTM - [0:0]
:NETBIRD-RT-NAT - [0:0]
:NETBIRD-RT-RDR - [0:0]
-A PREROUTING -j NETBIRD-RT-RDR
-A PREROUTING -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A PREROUTING -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A OUTPUT -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -m addrtype --dst-type LOCAL -j CNI-HOSTPORT-DNAT
-A POSTROUTING -j NETBIRD-RT-NAT
-A POSTROUTING -m comment --comment "CNI portfwd requiring masquerade" -j CNI-HOSTPORT-MASQ
-A POSTROUTING -m comment --comment "kubernetes postrouting rules" -j KUBE-POSTROUTING
-A POSTROUTING -m comment --comment "flanneld masq" -j FLANNEL-POSTRTG
-A CNI-DN-a4cb24fc39591e11f9bb8 -s 10.42.0.0/24 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a4cb24fc39591e11f9bb8 -s 127.0.0.1/32 -p tcp -m tcp --dport 80 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a4cb24fc39591e11f9bb8 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.42.0.13:80
-A CNI-DN-a4cb24fc39591e11f9bb8 -s 10.42.0.0/24 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a4cb24fc39591e11f9bb8 -s 127.0.0.1/32 -p tcp -m tcp --dport 443 -j CNI-HOSTPORT-SETMARK
-A CNI-DN-a4cb24fc39591e11f9bb8 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.42.0.13:443
-A CNI-HOSTPORT-DNAT -p tcp -m comment --comment "dnat name: \"cbr0\" id: \"d3a616769939af3de6416c8fbd606883335bd5ae6dab80336791ff97f0987f37\"" -m multiport --dports 80,443 -j CNI-DN-a4cb24fc39591e11f9bb8
-A CNI-HOSTPORT-MASQ -m mark --mark 0x2000/0x2000 -j MASQUERADE
-A CNI-HOSTPORT-SETMARK -m comment --comment "CNI portfwd masquerade mark" -j MARK --set-xmark 0x2000/0x2000
-A FLANNEL-POSTRTG -m mark --mark 0x4000/0x4000 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/24 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/16 -d 10.42.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/24 -m comment --comment "flanneld masq" -j RETURN
-A FLANNEL-POSTRTG -s 10.42.0.0/16 ! -d 224.0.0.0/4 -m comment --comment "flanneld masq" -j MASQUERADE
-A FLANNEL-POSTRTG ! -s 10.42.0.0/16 -d 10.42.0.0/16 -m comment --comment "flanneld masq" -j MASQUERADE
-A KUBE-EXT-CVG3OEGEH7H5P3HQ -m comment --comment "masquerade traffic for kube-system/traefik:websecure external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-CVG3OEGEH7H5P3HQ -j KUBE-SVC-CVG3OEGEH7H5P3HQ
-A KUBE-EXT-UQMCRMJZLI3FTLDP -m comment --comment "masquerade traffic for kube-system/traefik:web external destinations" -j KUBE-MARK-MASQ
-A KUBE-EXT-UQMCRMJZLI3FTLDP -j KUBE-SVC-UQMCRMJZLI3FTLDP
-A KUBE-MARK-MASQ -j MARK --set-xmark 0x4000/0x4000
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "kube-system/traefik:web" -m tcp --dport 31475 -m nfacct [unsupported revision] -j KUBE-EXT-UQMCRMJZLI3FTLDP
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/traefik:web" -m tcp --dport 31475 -j KUBE-EXT-UQMCRMJZLI3FTLDP
-A KUBE-NODEPORTS -d 127.0.0.0/8 -p tcp -m comment --comment "kube-system/traefik:websecure" -m tcp --dport 32113 -m nfacct [unsupported revision] -j KUBE-EXT-CVG3OEGEH7H5P3HQ
-A KUBE-NODEPORTS -p tcp -m comment --comment "kube-system/traefik:websecure" -m tcp --dport 32113 -j KUBE-EXT-CVG3OEGEH7H5P3HQ
-A KUBE-POSTROUTING -m mark ! --mark 0x4000/0x4000 -j RETURN
-A KUBE-POSTROUTING -j MARK --set-xmark 0x4000/0x0
-A KUBE-POSTROUTING -m comment --comment "kubernetes service traffic requiring SNAT" -j MASQUERADE
-A KUBE-SEP-47Y5U5YZCS62OEBZ -s 10.42.0.12/32 -m comment --comment "kube-system/traefik:websecure" -j KUBE-MARK-MASQ
-A KUBE-SEP-47Y5U5YZCS62OEBZ -p tcp -m comment --comment "kube-system/traefik:websecure" -m tcp -j DNAT --to-destination 10.42.0.12:8443
-A KUBE-SEP-7LZSRWW2O47JYKAG -s 10.42.0.23/32 -m comment --comment "icebot/minio:api" -j KUBE-MARK-MASQ
-A KUBE-SEP-7LZSRWW2O47JYKAG -p tcp -m comment --comment "icebot/minio:api" -m tcp -j DNAT --to-destination 10.42.0.23:9000
-A KUBE-SEP-DNK5QGLSB3KVH7BQ -s 10.42.0.11/32 -m comment --comment "kube-system/kube-dns:metrics" -j KUBE-MARK-MASQ
-A KUBE-SEP-DNK5QGLSB3KVH7BQ -p tcp -m comment --comment "kube-system/kube-dns:metrics" -m tcp -j DNAT --to-destination 10.42.0.11:9153
-A KUBE-SEP-FKBAFHEMNDLWAALR -s 10.42.0.11/32 -m comment --comment "kube-system/kube-dns:dns-tcp" -j KUBE-MARK-MASQ
-A KUBE-SEP-FKBAFHEMNDLWAALR -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp" -m tcp -j DNAT --to-destination 10.42.0.11:53
-A KUBE-SEP-IDRCU4GVQLEQPIJI -s 110.172.29.81/32 -m comment --comment "default/kubernetes:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-IDRCU4GVQLEQPIJI -p tcp -m comment --comment "default/kubernetes:https" -m tcp -j DNAT --to-destination 110.172.29.81:6443
-A KUBE-SEP-KIIPWNCXDWEKYBT2 -s 10.42.0.11/32 -m comment --comment "kube-system/kube-dns:dns" -j KUBE-MARK-MASQ
-A KUBE-SEP-KIIPWNCXDWEKYBT2 -p udp -m comment --comment "kube-system/kube-dns:dns" -m udp -j DNAT --to-destination 10.42.0.11:53
-A KUBE-SEP-UMJVULBQ4FY6GLTN -s 10.42.0.14/32 -m comment --comment "kube-system/metrics-server:https" -j KUBE-MARK-MASQ
-A KUBE-SEP-UMJVULBQ4FY6GLTN -p tcp -m comment --comment "kube-system/metrics-server:https" -m tcp -j DNAT --to-destination 10.42.0.14:10250
-A KUBE-SEP-WRRI3TLRN4DJLEIK -s 10.42.0.23/32 -m comment --comment "icebot/minio:console" -j KUBE-MARK-MASQ
-A KUBE-SEP-WRRI3TLRN4DJLEIK -p tcp -m comment --comment "icebot/minio:console" -m tcp -j DNAT --to-destination 10.42.0.23:9001
-A KUBE-SEP-WXNJTCLK7DXLEPOE -s 10.42.0.12/32 -m comment --comment "kube-system/traefik:web" -j KUBE-MARK-MASQ
-A KUBE-SEP-WXNJTCLK7DXLEPOE -p tcp -m comment --comment "kube-system/traefik:web" -m tcp -j DNAT --to-destination 10.42.0.12:8000
-A KUBE-SEP-ZDAZRPWR77NCFC3T -s 10.42.0.103/32 -m comment --comment "icebot/icebot-backend:http" -j KUBE-MARK-MASQ
-A KUBE-SEP-ZDAZRPWR77NCFC3T -p tcp -m comment --comment "icebot/icebot-backend:http" -m tcp -j DNAT --to-destination 10.42.0.103:8080
-A KUBE-SERVICES -d 10.43.112.93/32 -p tcp -m comment --comment "icebot/minio:console cluster IP" -m tcp --dport 9001 -j KUBE-SVC-SJ3JN7SAIKENWRXO
-A KUBE-SERVICES -d 10.43.198.12/32 -p tcp -m comment --comment "icebot/icebot-backend:http cluster IP" -m tcp --dport 8080 -j KUBE-SVC-C6FLSAAXH3PSQ5AI
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-SVC-JD5MR3NA4I4DYORP
-A KUBE-SERVICES -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-SVC-TCOU7JCQXEZGVUNU
-A KUBE-SERVICES -d 10.43.243.108/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-Z4ANX4WAEWEBLCTM
-A KUBE-SERVICES -d 10.43.93.251/32 -p tcp -m comment --comment "kube-system/traefik:web cluster IP" -m tcp --dport 80 -j KUBE-SVC-UQMCRMJZLI3FTLDP
-A KUBE-SERVICES -d 110.172.29.81/32 -p tcp -m comment --comment "kube-system/traefik:web loadbalancer IP" -m tcp --dport 80 -j KUBE-EXT-UQMCRMJZLI3FTLDP
-A KUBE-SERVICES -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-SVC-NPX46M4PTMTKRN6Y
-A KUBE-SERVICES -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-SVC-ERIFXISQEP7F7OF4
-A KUBE-SERVICES -d 10.43.93.251/32 -p tcp -m comment --comment "kube-system/traefik:websecure cluster IP" -m tcp --dport 443 -j KUBE-SVC-CVG3OEGEH7H5P3HQ
-A KUBE-SERVICES -d 110.172.29.81/32 -p tcp -m comment --comment "kube-system/traefik:websecure loadbalancer IP" -m tcp --dport 443 -j KUBE-EXT-CVG3OEGEH7H5P3HQ
-A KUBE-SERVICES -d 10.43.112.93/32 -p tcp -m comment --comment "icebot/minio:api cluster IP" -m tcp --dport 9000 -j KUBE-SVC-7JZAWIZ4MMWN35ZA
-A KUBE-SERVICES -m comment --comment "kubernetes service nodeports; NOTE: this must be the last rule in this chain" -m addrtype --dst-type LOCAL -j KUBE-NODEPORTS
-A KUBE-SVC-7JZAWIZ4MMWN35ZA ! -s 10.42.0.0/16 -d 10.43.112.93/32 -p tcp -m comment --comment "icebot/minio:api cluster IP" -m tcp --dport 9000 -j KUBE-MARK-MASQ
-A KUBE-SVC-7JZAWIZ4MMWN35ZA -m comment --comment "icebot/minio:api -> 10.42.0.23:9000" -j KUBE-SEP-7LZSRWW2O47JYKAG
-A KUBE-SVC-C6FLSAAXH3PSQ5AI ! -s 10.42.0.0/16 -d 10.43.198.12/32 -p tcp -m comment --comment "icebot/icebot-backend:http cluster IP" -m tcp --dport 8080 -j KUBE-MARK-MASQ
-A KUBE-SVC-C6FLSAAXH3PSQ5AI -m comment --comment "icebot/icebot-backend:http -> 10.42.0.103:8080" -j KUBE-SEP-ZDAZRPWR77NCFC3T
-A KUBE-SVC-CVG3OEGEH7H5P3HQ ! -s 10.42.0.0/16 -d 10.43.93.251/32 -p tcp -m comment --comment "kube-system/traefik:websecure cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-CVG3OEGEH7H5P3HQ -m comment --comment "kube-system/traefik:websecure -> 10.42.0.12:8443" -j KUBE-SEP-47Y5U5YZCS62OEBZ
-A KUBE-SVC-ERIFXISQEP7F7OF4 ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:dns-tcp cluster IP" -m tcp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-ERIFXISQEP7F7OF4 -m comment --comment "kube-system/kube-dns:dns-tcp -> 10.42.0.11:53" -j KUBE-SEP-FKBAFHEMNDLWAALR
-A KUBE-SVC-JD5MR3NA4I4DYORP ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p tcp -m comment --comment "kube-system/kube-dns:metrics cluster IP" -m tcp --dport 9153 -j KUBE-MARK-MASQ
-A KUBE-SVC-JD5MR3NA4I4DYORP -m comment --comment "kube-system/kube-dns:metrics -> 10.42.0.11:9153" -j KUBE-SEP-DNK5QGLSB3KVH7BQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y ! -s 10.42.0.0/16 -d 10.43.0.1/32 -p tcp -m comment --comment "default/kubernetes:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-NPX46M4PTMTKRN6Y -m comment --comment "default/kubernetes:https -> 110.172.29.81:6443" -j KUBE-SEP-IDRCU4GVQLEQPIJI
-A KUBE-SVC-SJ3JN7SAIKENWRXO ! -s 10.42.0.0/16 -d 10.43.112.93/32 -p tcp -m comment --comment "icebot/minio:console cluster IP" -m tcp --dport 9001 -j KUBE-MARK-MASQ
-A KUBE-SVC-SJ3JN7SAIKENWRXO -m comment --comment "icebot/minio:console -> 10.42.0.23:9001" -j KUBE-SEP-WRRI3TLRN4DJLEIK
-A KUBE-SVC-TCOU7JCQXEZGVUNU ! -s 10.42.0.0/16 -d 10.43.0.10/32 -p udp -m comment --comment "kube-system/kube-dns:dns cluster IP" -m udp --dport 53 -j KUBE-MARK-MASQ
-A KUBE-SVC-TCOU7JCQXEZGVUNU -m comment --comment "kube-system/kube-dns:dns -> 10.42.0.11:53" -j KUBE-SEP-KIIPWNCXDWEKYBT2
-A KUBE-SVC-UQMCRMJZLI3FTLDP ! -s 10.42.0.0/16 -d 10.43.93.251/32 -p tcp -m comment --comment "kube-system/traefik:web cluster IP" -m tcp --dport 80 -j KUBE-MARK-MASQ
-A KUBE-SVC-UQMCRMJZLI3FTLDP -m comment --comment "kube-system/traefik:web -> 10.42.0.12:8000" -j KUBE-SEP-WXNJTCLK7DXLEPOE
-A KUBE-SVC-Z4ANX4WAEWEBLCTM ! -s 10.42.0.0/16 -d 10.43.243.108/32 -p tcp -m comment --comment "kube-system/metrics-server:https cluster IP" -m tcp --dport 443 -j KUBE-MARK-MASQ
-A KUBE-SVC-Z4ANX4WAEWEBLCTM -m comment --comment "kube-system/metrics-server:https -> 10.42.0.14:10250" -j KUBE-SEP-UMJVULBQ4FY6GLTN
-A NETBIRD-RT-NAT ! -o lo -m mark --mark 0x1bd21 -j MASQUERADE
-A NETBIRD-RT-NAT -o wt0 -m mark --mark 0x1bd22 -j MASQUERADE
COMMIT
# Completed on Mon Aug 17 01:23:14 2026
# Generated by iptables-save v1.6.1 on Mon Aug 17 01:23:14 2026
*filter
:INPUT ACCEPT [1761:608863]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1637:611132]
:FLANNEL-FWD - [0:0]
:KUBE-EXTERNAL-SERVICES - [0:0]
:KUBE-FIREWALL - [0:0]
:KUBE-FORWARD - [0:0]
:KUBE-KUBELET-CANARY - [0:0]
:KUBE-NODEPORTS - [0:0]
:KUBE-NWPLCY-COMMON - [0:0]
:KUBE-NWPLCY-DEFAULT - [0:0]
:KUBE-POD-FW-76DIEIBHM6CEJUZ7 - [0:0]
:KUBE-POD-FW-7SDCSIJHOMSDIPWE - [0:0]
:KUBE-POD-FW-BQNZEK4M3RA72GOL - [0:0]
:KUBE-POD-FW-DDTA4BCW4SJQWH3D - [0:0]
:KUBE-POD-FW-GZ3GD5WICOLRYFA7 - [0:0]
:KUBE-POD-FW-H6IDOUB6EWS5CDT7 - [0:0]
:KUBE-POD-FW-LPEGPZQARBIRO25U - [0:0]
:KUBE-POD-FW-QDRPOAOSHGLQ7GDD - [0:0]
:KUBE-POD-FW-YHKISWP5P7MGYPGM - [0:0]
:KUBE-PROXY-CANARY - [0:0]
:KUBE-PROXY-FIREWALL - [0:0]
:KUBE-ROUTER-FORWARD - [0:0]
:KUBE-ROUTER-INPUT - [0:0]
:KUBE-ROUTER-OUTPUT - [0:0]
:KUBE-SERVICES - [0:0]
:NETBIRD-ACL-INPUT - [0:0]
:NETBIRD-RT-FWD-IN - [0:0]
:NETBIRD-RT-FWD-OUT - [0:0]
-A INPUT -m comment --comment "kube-router netpol - 4IA2OSFRMVNDXBVV" -j KUBE-ROUTER-INPUT
-A INPUT -i wt0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i wt0 -j NETBIRD-ACL-INPUT
-A INPUT -i wt0 -j DROP
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A INPUT -m comment --comment "kubernetes health check service ports" -j KUBE-NODEPORTS
-A INPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A INPUT -j KUBE-FIREWALL
-A INPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A FORWARD -m comment --comment "kube-router netpol - TEMCG2JMHZYE7H7T" -j KUBE-ROUTER-FORWARD
-A FORWARD -i wt0 -j NETBIRD-RT-FWD-IN
-A FORWARD -i wt0 -p tcp -m set --match-set nb0000093-dport src -m tcp --dport 443 -j ACCEPT
-A FORWARD
-A FORWARD -m mark --mark 0x1bd20 -j ACCEPT
-A FORWARD -o wt0 -j NETBIRD-RT-FWD-OUT
-A FORWARD -i wt0 -j DROP
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A FORWARD -m comment --comment "kubernetes forwarding rules" -j KUBE-FORWARD
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A FORWARD -m conntrack --ctstate NEW -m comment --comment "kubernetes externally-visible service portals" -j KUBE-EXTERNAL-SERVICES
-A FORWARD -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A FORWARD -m comment --comment "flanneld forward" -j FLANNEL-FWD
-A OUTPUT -m comment --comment "kube-router netpol - VEAAIY32XVBHCSCY" -j KUBE-ROUTER-OUTPUT
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes load balancer firewall" -j KUBE-PROXY-FIREWALL
-A OUTPUT -m conntrack --ctstate NEW -m comment --comment "kubernetes service portals" -j KUBE-SERVICES
-A OUTPUT -j KUBE-FIREWALL
-A OUTPUT -m comment --comment "KUBE-ROUTER rule to explicitly ACCEPT traffic that comply to network policies" -m mark --mark 0x20000/0x20000 -j ACCEPT
-A FLANNEL-FWD -s 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A FLANNEL-FWD -d 10.42.0.0/16 -m comment --comment "flanneld forward" -j ACCEPT
-A KUBE-FIREWALL ! -s 127.0.0.0/8 -d 127.0.0.0/8 -m comment --comment "block incoming localnet connections" -m conntrack ! --ctstate RELATED,ESTABLISHED,DNAT -j DROP
-A KUBE-FORWARD -m conntrack --ctstate INVALID -m nfacct [unsupported revision] -j DROP
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding rules" -m mark --mark 0x4000/0x4000 -j ACCEPT
-A KUBE-FORWARD -m comment --comment "kubernetes forwarding conntrack rule" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-NWPLCY-COMMON -m comment --comment "\"rule to drop invalid state for pod\"" -m conntrack --ctstate INVALID -j DROP
-A KUBE-NWPLCY-COMMON -m comment --comment "\"rule for stateful firewall for pod\"" -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp echo requests" -m icmp --icmp-type 8 -j ACCEPT
-A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp destination unreachable messages" -m icmp --icmp-type 3 -j ACCEPT
-A KUBE-NWPLCY-COMMON -p icmp -m comment --comment "allow icmp time exceeded messages" -m icmp --icmp-type 11 -j ACCEPT
-A KUBE-NWPLCY-DEFAULT -m comment --comment "rule to mark traffic matching a network policy" -j MARK --set-xmark 0x10000/0x10000
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -d 10.42.0.12/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -s 10.42.0.12/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -d 10.42.0.12/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -m comment --comment "rule to log dropped traffic POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -m comment --comment "rule to REJECT traffic destined for POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-76DIEIBHM6CEJUZ7 -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -d 10.42.0.20/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -s 10.42.0.20/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -d 10.42.0.20/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -m comment --comment "rule to log dropped traffic POD name:postgres-0 namespace: icebot" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -m comment --comment "rule to REJECT traffic destined for POD name:postgres-0 namespace: icebot" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-7SDCSIJHOMSDIPWE -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -d 10.42.0.11/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -s 10.42.0.11/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -d 10.42.0.11/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -m comment --comment "rule to log dropped traffic POD name:coredns-f7d7dc788-js5cn namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -m comment --comment "rule to REJECT traffic destined for POD name:coredns-f7d7dc788-js5cn namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-BQNZEK4M3RA72GOL -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -d 10.42.0.10/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -s 10.42.0.10/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -d 10.42.0.10/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -m comment --comment "rule to log dropped traffic POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -m comment --comment "rule to REJECT traffic destined for POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-DDTA4BCW4SJQWH3D -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -d 10.42.0.52/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -s 10.42.0.52/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -d 10.42.0.52/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -m comment --comment "rule to log dropped traffic POD name:cloudflared-55c684775-fbj9r namespace: icebot" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -m comment --comment "rule to REJECT traffic destined for POD name:cloudflared-55c684775-fbj9r namespace: icebot" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-GZ3GD5WICOLRYFA7 -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -d 10.42.0.103/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -s 10.42.0.103/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -d 10.42.0.103/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -m comment --comment "rule to log dropped traffic POD name:icebot-backend-d78577c44-tx8jv namespace: icebot" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -m comment --comment "rule to REJECT traffic destined for POD name:icebot-backend-d78577c44-tx8jv namespace: icebot" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-H6IDOUB6EWS5CDT7 -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-LPEGPZQARBIRO25U -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-LPEGPZQARBIRO25U -d 10.42.0.23/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-LPEGPZQARBIRO25U -s 10.42.0.23/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-LPEGPZQARBIRO25U -d 10.42.0.23/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-LPEGPZQARBIRO25U -m comment --comment "rule to log dropped traffic POD name:minio-0 namespace: icebot" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-LPEGPZQARBIRO25U -m comment --comment "rule to REJECT traffic destined for POD name:minio-0 namespace: icebot" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-LPEGPZQARBIRO25U -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-LPEGPZQARBIRO25U -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -d 10.42.0.13/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -s 10.42.0.13/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -d 10.42.0.13/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -m comment --comment "rule to log dropped traffic POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -m comment --comment "rule to REJECT traffic destined for POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-QDRPOAOSHGLQ7GDD -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -m comment --comment "common bi-directional traffic policy rules" -j KUBE-NWPLCY-COMMON
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -d 10.42.0.14/32 -m comment --comment "rule to permit the traffic traffic to pods when source is the pod\'s local node" -m addrtype --src-type LOCAL -j ACCEPT
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -s 10.42.0.14/32 -m comment --comment "run through default egress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -d 10.42.0.14/32 -m comment --comment "run through default ingress network policy chain" -j KUBE-NWPLCY-DEFAULT
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -m comment --comment "rule to log dropped traffic POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -m limit --limit 10/min --limit-burst 10 -j NFLOG --nflog-group 100
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -m comment --comment "rule to REJECT traffic destined for POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system" -m mark ! --mark 0x10000/0x10000 -j REJECT --reject-with icmp-port-unreachable
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -j MARK --set-xmark 0x0/0x10000
-A KUBE-POD-FW-YHKISWP5P7MGYPGM -m comment --comment "set mark to ACCEPT traffic that comply to network policies" -j MARK --set-xmark 0x20000/0x20000
-A KUBE-ROUTER-FORWARD -d 10.42.0.103/32 -m comment --comment "rule to jump traffic destined to POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-FORWARD -d 10.42.0.103/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-FORWARD -s 10.42.0.103/32 -m comment --comment "rule to jump traffic from POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-FORWARD -s 10.42.0.103/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-FORWARD -d 10.42.0.11/32 -m comment --comment "rule to jump traffic destined to POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-FORWARD -d 10.42.0.11/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-FORWARD -s 10.42.0.11/32 -m comment --comment "rule to jump traffic from POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-FORWARD -s 10.42.0.11/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-FORWARD -d 10.42.0.10/32 -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-FORWARD -d 10.42.0.10/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-FORWARD -s 10.42.0.10/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-FORWARD -s 10.42.0.10/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-FORWARD -d 10.42.0.14/32 -m comment --comment "rule to jump traffic destined to POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-FORWARD -d 10.42.0.14/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-FORWARD -s 10.42.0.14/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-FORWARD -s 10.42.0.14/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-FORWARD -d 10.42.0.13/32 -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-FORWARD -d 10.42.0.13/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-FORWARD -s 10.42.0.13/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-FORWARD -s 10.42.0.13/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-FORWARD -d 10.42.0.52/32 -m comment --comment "rule to jump traffic destined to POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-FORWARD -d 10.42.0.52/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-FORWARD -s 10.42.0.52/32 -m comment --comment "rule to jump traffic from POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-FORWARD -s 10.42.0.52/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-FORWARD -d 10.42.0.12/32 -m comment --comment "rule to jump traffic destined to POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-FORWARD -d 10.42.0.12/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-FORWARD -s 10.42.0.12/32 -m comment --comment "rule to jump traffic from POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-FORWARD -s 10.42.0.12/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-FORWARD -d 10.42.0.23/32 -m comment --comment "rule to jump traffic destined to POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-FORWARD -d 10.42.0.23/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-FORWARD -s 10.42.0.23/32 -m comment --comment "rule to jump traffic from POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-FORWARD -s 10.42.0.23/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-FORWARD -d 10.42.0.20/32 -m comment --comment "rule to jump traffic destined to POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-FORWARD -d 10.42.0.20/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic destined to POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-FORWARD -s 10.42.0.20/32 -m comment --comment "rule to jump traffic from POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-FORWARD -s 10.42.0.20/32 -m physdev --physdev-is-bridged -m comment --comment "rule to jump traffic from POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-INPUT -d 10.43.0.0/16 -m comment --comment "allow traffic to primary/secondary cluster IP range - EKROEGTNIJ3AP3LC" -j RETURN
-A KUBE-ROUTER-INPUT -p tcp -m comment --comment "allow LOCAL TCP traffic to node ports - LR7XO7NXDBGQJD2M" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
-A KUBE-ROUTER-INPUT -p udp -m comment --comment "allow LOCAL UDP traffic to node ports - 76UCBPIZNGJNWNUZ" -m addrtype --dst-type LOCAL -m multiport --dports 30000:32767 -j RETURN
-A KUBE-ROUTER-INPUT -s 10.42.0.103/32 -m comment --comment "rule to jump traffic from POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-INPUT -s 10.42.0.11/32 -m comment --comment "rule to jump traffic from POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-INPUT -s 10.42.0.10/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-INPUT -s 10.42.0.14/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-INPUT -s 10.42.0.13/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-INPUT -s 10.42.0.52/32 -m comment --comment "rule to jump traffic from POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-INPUT -s 10.42.0.12/32 -m comment --comment "rule to jump traffic from POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-INPUT -s 10.42.0.23/32 -m comment --comment "rule to jump traffic from POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-INPUT -s 10.42.0.20/32 -m comment --comment "rule to jump traffic from POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-OUTPUT -d 10.42.0.103/32 -m comment --comment "rule to jump traffic destined to POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-OUTPUT -s 10.42.0.103/32 -m comment --comment "rule to jump traffic from POD name:icebot-backend-d78577c44-tx8jv namespace: icebot to chain KUBE-POD-FW-H6IDOUB6EWS5CDT7" -j KUBE-POD-FW-H6IDOUB6EWS5CDT7
-A KUBE-ROUTER-OUTPUT -d 10.42.0.11/32 -m comment --comment "rule to jump traffic destined to POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-OUTPUT -s 10.42.0.11/32 -m comment --comment "rule to jump traffic from POD name:coredns-f7d7dc788-js5cn namespace: kube-system to chain KUBE-POD-FW-BQNZEK4M3RA72GOL" -j KUBE-POD-FW-BQNZEK4M3RA72GOL
-A KUBE-ROUTER-OUTPUT -d 10.42.0.10/32 -m comment --comment "rule to jump traffic destined to POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-OUTPUT -s 10.42.0.10/32 -m comment --comment "rule to jump traffic from POD name:local-path-provisioner-5ccf877896-pnpzb namespace: kube-system to chain KUBE-POD-FW-DDTA4BCW4SJQWH3D" -j KUBE-POD-FW-DDTA4BCW4SJQWH3D
-A KUBE-ROUTER-OUTPUT -d 10.42.0.14/32 -m comment --comment "rule to jump traffic destined to POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-OUTPUT -s 10.42.0.14/32 -m comment --comment "rule to jump traffic from POD name:metrics-server-65ddb7d4b5-2wsdm namespace: kube-system to chain KUBE-POD-FW-YHKISWP5P7MGYPGM" -j KUBE-POD-FW-YHKISWP5P7MGYPGM
-A KUBE-ROUTER-OUTPUT -d 10.42.0.13/32 -m comment --comment "rule to jump traffic destined to POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-OUTPUT -s 10.42.0.13/32 -m comment --comment "rule to jump traffic from POD name:svclb-traefik-2b3fa64b-k5qgt namespace: kube-system to chain KUBE-POD-FW-QDRPOAOSHGLQ7GDD" -j KUBE-POD-FW-QDRPOAOSHGLQ7GDD
-A KUBE-ROUTER-OUTPUT -d 10.42.0.52/32 -m comment --comment "rule to jump traffic destined to POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-OUTPUT -s 10.42.0.52/32 -m comment --comment "rule to jump traffic from POD name:cloudflared-55c684775-fbj9r namespace: icebot to chain KUBE-POD-FW-GZ3GD5WICOLRYFA7" -j KUBE-POD-FW-GZ3GD5WICOLRYFA7
-A KUBE-ROUTER-OUTPUT -d 10.42.0.12/32 -m comment --comment "rule to jump traffic destined to POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-OUTPUT -s 10.42.0.12/32 -m comment --comment "rule to jump traffic from POD name:traefik-6d6fd89c6c-k2n4c namespace: kube-system to chain KUBE-POD-FW-76DIEIBHM6CEJUZ7" -j KUBE-POD-FW-76DIEIBHM6CEJUZ7
-A KUBE-ROUTER-OUTPUT -d 10.42.0.23/32 -m comment --comment "rule to jump traffic destined to POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-OUTPUT -s 10.42.0.23/32 -m comment --comment "rule to jump traffic from POD name:minio-0 namespace: icebot to chain KUBE-POD-FW-LPEGPZQARBIRO25U" -j KUBE-POD-FW-LPEGPZQARBIRO25U
-A KUBE-ROUTER-OUTPUT -d 10.42.0.20/32 -m comment --comment "rule to jump traffic destined to POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A KUBE-ROUTER-OUTPUT -s 10.42.0.20/32 -m comment --comment "rule to jump traffic from POD name:postgres-0 namespace: icebot to chain KUBE-POD-FW-7SDCSIJHOMSDIPWE" -j KUBE-POD-FW-7SDCSIJHOMSDIPWE
-A NETBIRD-ACL-INPUT -m set --match-set nb0000001 src -j ACCEPT
-A NETBIRD-ACL-INPUT -m set --match-set nb0000063 src -j ACCEPT
-A NETBIRD-ACL-INPUT -m set --match-set nb0000081 src -j ACCEPT
-A NETBIRD-ACL-INPUT -m set --match-set nb0000083 src -j ACCEPT
-A NETBIRD-ACL-INPUT -p tcp -m set --match-set nb0000093-dport src -m tcp --dport 443 -j ACCEPT
-A NETBIRD-RT-FWD-IN -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A NETBIRD-RT-FWD-OUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Mon Aug 17 01:23:14 2026
